[build-system]
requires = ["chronver", "setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "The Board of Trustees of the Leland Stanford Junior University, through SLAC National Accelerator Laboratory (subject to receipt of any required approvals from the U.S. Dept. of Energy)", email = "pip@radiasoft.net" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
dependencies = [
    "SQLAlchemy>=1.4,<2",
    "dateutil",
    "pykern",
    "watchdog",
]
description = "SLAC Digital Twin"
dynamic = ["version"]
name = "slactwin"
readme = "README.md"

[project.scripts]
slactwin = "slactwin.slactwin_console:main"

[project.urls]
Homepage = "https://github.com/slaclab/slactwin"

[tool.setuptools.package-data]
slactwin = ["package_data/**"]

[tool.setuptools.packages.find]
include = ["slactwin*"]
